# electionsNotifer

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  PROJECT_PLAN.md  README.md  committeeWhitelist.csv  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 14890def496a_add_all_filings_to_subscriptions.py  33199f367138_initial_schema.py  59df159a7288_all_cps_digests_filing_races.py  9fbf53e1c090_initial_schema.py
src/isbe_notifier/: committee_sync.py  config.py  db.py  load_whitelist.py  matching.py  models.py  poller.py  seeds.py
src/isbe_notifier/notify/: content.py  digest.py  emailer.py  push.py  tokens.py
src/isbe_notifier/scraper/: client.py  download.py  pages.py  rss.py
src/isbe_notifier/web/: app.py
src/isbe_notifier/web/static/: app.js  manifest.json  nav.js  style.css  sw.js
src/isbe_notifier/web/templates/: admin.html  base.html  index.html  install.html  landing.html  login.html  manage.html  message.html  subscribe.html
tests/: test_digest.py  test_parsers.py  test_pipeline.py  test_web.py
tests/fixtures/: a1_download.csv  a1_list.html  b1_download.csv  b1_list.html  b1_list_paged.html  committee_detail.html  latest_reports.xml
